--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache:
 before_install:
     - mkdir -p /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734 && wget https://www.dropbox.com/s/c6xavx90x3n5aov/apache-flex-sdk-4.10.0-bin.zip?dl=1 -O /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/apache-flex-sdk-4.10.0-bin.zip && unzip /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/apache-flex-sdk-4.10.0-bin.zip -d /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734 && rm /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/apache-flex-sdk-4.10.0-bin.zip
     - mkdir -p /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/in/ && wget http://sourceforge.net/projects/osmf.adobe/files/OSMF%201.0%20%28final%20source%2C%20ASDocs%2C%20PDF%20guides%2C%20and%20release%20notes%29/OSMF_1.0.zip/download -O /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/in/OSMF_1.0.zip
+    - unzip /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/in/OSMF_1.0.zip -d /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/in && mv /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/in/OSMF.swc /home/travis/.gradle/gradleFx/sdks/77b6510675e9bf47142422c374af153591fe4734/frameworks/lis/OSMF.swc
 install:
   - ./gradlew build -Ptarget=11.6
   - ./gradlew build -Ptarget=10.2
